# roblox-py

./: .all-contributorsrc  .argon.project.json  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYRIGHTS.md  COPYRIGHTS.txt  DEV.md  MANIFEST.in  README.md  SECURITY.md  SUMMARY.md  __main__.py  build.md  debug.py  index.html  main.py  rbxpy.spec  setup.cfg  setup.lua  setup.py  table.py  test.py
.github/: FUNDING.yml
c-docs/: introduction.md
cli/: installation.md
cli-docs/: introduction.md
docs/: 404.html  cpp.html  index.html  moonscript.html  moonscript.js  python.html
group-3/: introduction.md
group-4/: introduction.md
lunar/: api.md
lunar-docs/: introduction.md
playground/: index.html  style.css
plugin/: init.lua
py-docs/: introduction.md
python/: api.md
roblox-pyc-main/: nodevisitor.py  parser.py  robloxpy.py  writer.py
roblox_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
robloxpyc/: __init__.py  basecompilers.py  bindings.py  binopdesc.py  cfg.pkl  util.py  (+19 more)
src/: .gitignore  API.md  CMakeLists.txt  README.md  __main__.py  astclass.cobalt  basecompilers.py  bindings.py  binop.py  binopdesc.py  boolop.py  cast.cobalt  cmpopdesc.py  cnodevisitor.py  colortext.py  compop.py  config.py  const.py  context.py  cpAST.py  cppast.cobalt  ctranslator.py  generator.cobalt  header.lua  header.py  init.cobalt  init.py  lib.py  libs.py  log.py  loopcounter.py  luainit.lua  luainit.py  luainitlua.lua  luau.py  model.py  nodevisitor.py  parser.py  pyast.cobalt  pytranslator.py  (+11 more)
src/LuauAST/: bundle.ts  index.ts
src/LuauAST/impl/: List.ts  strings.ts  typeGuards.ts
src/LuauAST/types/: mapping.ts  nodes.ts
src/LuauAST/util/: isReservedIdentifier.ts
src/LuauRenderer/: index.ts  render.ts  solveTempIds.ts
src/LuauRenderer/nodes/expressions/: renderBinaryExpression.ts  renderFunctionExpression.ts  renderMixedTable.ts  renderNumberLiteral.ts  renderStringLiteral.ts  renderUnaryExpression.ts
src/LuauRenderer/nodes/expressions/indexable/: renderCallExpression.ts  renderMethodCallExpression.ts  renderPropertyAccessExpression.ts
src/LuauRenderer/nodes/statements/: renderAssignment.ts  renderComment.ts  renderDoStatement.ts  renderForStatement.ts  renderFunctionDeclaration.ts  renderMethodDeclaration.ts  renderNumericForStatement.ts
src/LuauRenderer/util/: identity.ts  needsParentheses.ts  renderArguments.ts  renderParameters.ts  renderStatements.ts  visit.ts
src/cli/: main.c
src/compiler/: luainit.py
src/template/: README.md  default.project.json
src/template/compiled/client/: init.client.example
(+203 files in other folders)
