[metadata]
name = roblox-pyc
version = 1.19.75

[options]
packages = src


[options.entry_points]
console_scripts =
    rblx-py = src.robloxpy:w
    rblx-c = src.robloxpy:candcpperror
    rblx-cpp = src.robloxpy:candcpperror
    rblx-lunar = src.robloxpy:lunar
    rblx-pyc = src.robloxpy:pyc
    
    rpyc = src.robloxpy:pyc

    rbxpyc = src.robloxpy:pyc
    rbxlun = src.robloxpy:lunar
    rbxpy = src.robloxpy:w
    rbxc = src.robloxpy:candcpperror
    rbxcpp = src.robloxpy:candcpperror
