[metadata]
name = roblox-pyc
version = 1.19.78

[options]
packages = roblox-pyc-main


[options.entry_points]
console_scripts =
    rblx-py = roblox-pyc-main.robloxpy:w
    rblx-c = roblox-pyc-main.robloxpy:candcpperror
    rblx-cpp = roblox-pyc-main.robloxpy:candcpperror
    rblx-lunar = roblox-pyc-main.robloxpy:lunar
    rblx-pyc = roblox-pyc-main.robloxpy:pyc
    
    rpyc = roblox-pyc-main.robloxpy:pyc

    rbxpyc = roblox-pyc-main.robloxpy:pyc
    rbxlun = roblox-pyc-main.robloxpy:lunar
    rbxpy = roblox-pyc-main.robloxpy:w
    rbxc = roblox-pyc-main.robloxpy:candcpperror
    rbxcpp = roblox-pyc-main.robloxpy:candcpperror
