[metadata]  
name = roblox-pyc
version = 2.25.112

[options] 
packages = robloxpyc


[options.entry_points]
console_scripts =
    rblx-py = robloxpyc.robloxpy:w
    rblx-c = robloxpyc.robloxpy:candcpperror
    rblx-cpp = robloxpyc.robloxpy:candcpperror
    rblx-lunar = robloxpyc.robloxpy:lunar
    rblx-pyc = robloxpyc.robloxpy:pyc
    
    rpyc = robloxpyc.robloxpy:pyc

    rbxpyc = robloxpyc.robloxpy:pyc 
    rbxlun = robloxpyc.robloxpy:lunar
    rbxpy = robloxpyc.robloxpy:w
    rbxc = robloxpyc.robloxpy:candcpperror
    rbxcpp = robloxpyc.robloxpy:candcpperror
